# hpc_scripts

./: .gitignore  README.md  dlc_batch_script_example.sh  pyproject.toml  run_dlc_tracking.sh  setup.cfg  setup.py
hpc_scripts/: brainglobe_array_job_constructor.py  gui.py  run_dlc_tracking.py  run_dlc_training.py
hpc_scripts/brainglobe/: brainglobe_array_job_constructor.py  brainreg_commands.py  brainreg_single_job_script_constructor.py  cellfinder_commands.py  shared_functions.py
hpc_scripts/brainglobe_hpc/: brainglobe_array_job_constructor.py  brainreg_commands.py  cellfinder_commands.py  file_management.py  gui_functions.py  shared_functions.py
hpc_scripts/brainreg/: brainreg_array_job_constructor.py  brainreg_commands.py  cellfinder_commands.py  slurm_config.py
hpc_scripts/dlc_legacy/: dlc_batch_script_example_no_package_install.sh  oldreadme.md  run_dlc_training.sh
