[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc_scripts"
version = "0.1.0"
description = "A short description of the project."
authors = [{ name = "Stephen Lenzi", email = "stephen.lenzi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
               "fire",
               "pyyaml",
               "cached-property",
                "xpmtd",
                "magicgui",
                "PyQt5; platform_system=='Windows'",
	              "PyQt5==5.14; platform_system=='Linux'",
]

[project.scripts]
brainglobe_hpc_gui = "hpc_scripts.gui:main"