[metadata]
name = hpc_scripts
url = https://github.com/stephenlenzi/hpc_scripts
download_url = https://github.com/stephenlenzi/hpc_scripts
description = Code for running hpc jobs
long_description = file: README.md
long_description_content_type = text/markdown
author = Stephen Lenzi
author_email = s.lenzi@ucl.ac.uk
project_urls =
	Source =  https://github.com/stephenlenzi/hpc_scripts
	Tracker = https://github.com/stephenlenzi/hpc_scripts/issues
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Neuroscientists
	Intended Audience :: Science/Research
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows :: Windows 10
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: >3.7

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
	setuptools_scm
install_requires =
	fire
	deeplabcut

[options.entry_points]
console_scripts =
    run_dlc_training = hpc_scripts.run_dlc_training:main
